--- a/csbox/static/css/layout.css
+++ b/csbox/static/css/layout.css
@@ -21,7 +21,7 @@
     left: 0;
     width: 100%;
     height: 55px;
-    background-color: #0A4D68;
+    background-color: #02264f;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,6 +48,12 @@
   justify-content: space-between;
   align-items: center;
 }
+.branding_section .branding h1{
+  font-size: 1.5rem;
+  font-weight: 200;
+  margin-left: .5rem;
+  font-weight: 400;
+}
 .branding_section .all_courses{
   text-decoration: none;
   color: white;
@@ -56,11 +62,7 @@
   color: rgba(255, 255, 255, 0.865);
   transition: all .1s ease-in-out;
 }
-.branding h1{
-    font-size: 1.7rem;
-    margin-left: .5rem;
-    font-weight: 400;
-}
+
 
 .avatar{
   display: inline-block;
