--- a/csbox/static/css/teacher/home.css
+++ b/csbox/static/css/teacher/home.css
@@ -46,14 +46,11 @@
     height: 100%;
     list-style: none;
 }
-.each_list_link{
+.list .each_list_link{
     text-decoration: none;
     color: black;
-    transition: all .2s ease;
 }
-.each_list_link:hover{
-    background-color: #4cd3ccca;
-}
+
 .list_item{
     background-color: #cccccce5;
     margin: 15px 0;
@@ -63,7 +60,13 @@
     justify-content: center;
     border-radius: 10px;
     overflow: hidden;
+    transition: all .3s ease;
 }
+.list_item:hover{
+    background-color: #01a9a1ec;
+    color: rgb(231, 231, 231);
+}
+
 /* .list_item a{
     padding: .5rem .5rem;
     width: 100%;
@@ -87,7 +90,7 @@
 }
 .list_post{
     font-size:1rem;
-    color: rgb(190, 44, 44);
+    color: rgb(220, 22, 22);
 }
 
 
@@ -124,17 +127,32 @@
 .post-card{
     width: 100%;
     padding: 10px;
-    margin-bottom: 25px;
-    border: 1px solid black;
-    background-color: aliceblue;
+    margin-bottom: 20px;
+    background-color: #cccccce5;
     border-radius: 5px;
     /* box-shadow: 5px 5px 7px rgb(115, 115, 115); */
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    transition: all .3s ease;
 }
+.post-card:hover{
+    background-color: #01a9a1ec;
+    color: rgb(231, 231, 231);
+}
+
 .post-head{
     font-size: 1rem;
     font-weight: 300;
+}
+
+.time{
+    color: rgb(66, 103, 255);
+    font-size: .95rem;
+    margin-left: .7rem;
+    transition: all .3s ease;
+}
+
+.post-card:hover .time{
+    color: rgb(255, 255, 255);
 }
