--- a/csbox/templates/layout.html
+++ b/csbox/templates/layout.html
@@ -39,12 +39,12 @@
         <div class="branding_section">
             {%if request.user.is_authenticated%}
                 <a class="branding" href="{%url 'home'%}">
-                    <img src="{%static 'images/open-box.png'%}" width="43" alt="branding logo"/>
-                    <h1>csBox</h1>
+                    <img src="{%static 'images/open-box.png'%}" width="38" alt="branding logo"/>
+                    <h1>CSBox</h1>
                 </a>
             {%else%}
                 <a class="branding" href="{%url 'signin'%}">
-                    <img src="{%static 'images/open-box.png'%}" width="43" alt="branding logo"/>
+                    <img src="{%static 'images/open-box.png'%}" width="38" alt="branding logo"/>
                     <h1>CSBox</h1>
                 </a>
             {%endif%}
