--- a/csbox/templates/single_post.html
+++ b/csbox/templates/single_post.html
@@ -1,7 +1,8 @@
 {%extends 'layout.html'%}
 
 {%load static%}
-
+{% load humanize %}
+{% load custom_filters %}
 {%block title%}
     {{post.postBody}} | CSBox - Educational Platform
 {%endblock title%}
@@ -25,15 +26,61 @@
                     <span class="bold">{{post.session.batch}}-{{post.session.section.section}}</span>
                     <span class="tiny"> - {{post.session.semester}}</span>
                 </h2>
-                <p class="time">{{post.created | timesince}} ago</p>  
+                <p class="time">{{post.created | format_time}} ago</p>  
             </div>
             <div class="post-body">
                 <h2 class="{%if post.postBody|length < 100%}body-text-normal{%else%}body-text-small{%endif%}">{{post.postBody}}</h2>
             </div>
-            <div class="comment-section"></div>
+            {%if post.has_file%}
+                <div id="post_upFile" class="files">
+                    {%for file in files%}
+                        {%if file.postId == post.id%}
+                            <div class="each">
+                                <a>{{file}}</a>
+                                <a style="margin-left:.6rem; font-size: .85rem; color:rgb(53, 53, 250);" href="{{file.uploadFile.url}}" target="_blank">Open</a>
+                            </div>
+                        {%endif%}
+                    {%endfor%}
+                </div>
+            {%endif%}
+            <div class="comment-section">
+                <form class="form_wraper" action="{%url 'post_comment' post.id%}" method="POST" >
+                    {%csrf_token%}
+                    <input type="text" name="comment" class="comment" id="comment" placeholder="Write your comment here..." required>
+                    <input type="submit" class="submit" value="Add Comment">
+                </form>
+                <div class="all_comment">
+                    <ul>
+                        {%for comment in comments%}
+                        {%if post.id == comment.postId.id %}
+                        <li class="single_comment">
+                            <div class="comment_wraper">
+                                <div class="avater">
+                                    {%for cmnt_profile in commenter_profile%}
+                                        {%if cmnt_profile.user == comment.commenter%}
+                                            {%if cmnt_profile.profile_pic%}
+                                                <img class="p" src="{{cmnt_profile.profile_pic.url}}" alt="avater">
+                                            {%endif%}
+                                        {%endif%}
+                                    {%endfor%}
+                                </div>
+                                <div>
+                                    <div class="comment_body">
+                                        <p class="commenter">{{comment.commenter.first_name}} {{comment.commenter.last_name}}</p>
+                                        <p class="body">{{comment.commentBody}}</p>
+                                    </div>
+                                    <p class="time">{{comment.created|format_time}} ago</p>
+                                </div>
+                            </div>
+                        </li>
+                        {%endif%}
+                        {%endfor%}
+                    </ul>
+                </div>
+            </div>
         </div>
         <a class="back-url" href="{{request.META.HTTP_REFERER}}">
-            <i class="fas fa-arrow-left fa-2x"></i>
+            <i style="color: rgb(2, 37, 134);" class="fas fa-arrow-left fa-2x"></i>
         </a>
     </div>
     
